# rosalind

./: .travis.yml  Cargo.toml  ProteinUtilities.rs  README.md  dag.rs  grph.rs  kmer.rs  lcsm.rs  lexf.rs  long.rs  math_helper.rs  prob.rs  revp.rs  splc.rs  tree.rs
data/: lgis.txt  pdst.txt  sseq.txt
src/: ProteinUtilities.rs  dag.rs  grph.rs  kmer.rs  lcsm.rs  lexf.rs  lgis.rs  lia.rs  long.rs  orf.rs  pdst.rs  prob.rs  protein_utilities.rs  revp.rs  splc.rs  sseq.rs  sset.rs  tran.rs  tree.rs
